# nvr-app

./: .gitignore  Makefile.am  README  configure.ac  nvr-app.service.sample
src/: Makefile.am  main.c  nvr-app.c  nvr-app.h
